fixes messages to align to the toolbar properly in sandbox mode

--- a/app/assets/site/messages.styl
+++ b/app/assets/site/messages.styl
@@ -24,9 +24,11 @@ message-color(color)
 
   position fixed
   z-index 850
-  top b1 * 1.5
+  top b1 * 1.5 //toolbar
   width 100%
   margin-bottom 0
+  &.sandbox
+    top b1 * 3.5 //sandbox+toolbar
 
   .message
     box-shadow box-shadow-def
